<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controller.view.ConvertMonnaieActivity"
    android:background="@drawable/background3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/conv"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgTND"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img_tnd"></ImageView>
        <EditText
            android:id="@+id/txtTND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/Montant"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            ></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/buttomCONV"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/bouttonConv"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:onClick="convert" />
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        >
        <TableRow>
            <ImageView
                android:id="@+id/Eur"
                android:src="@drawable/img_eur"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />
            <TextView
                android:id="@+id/txtEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/EUR"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                ></TextView>
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/Usd"
                android:src="@drawable/img_usd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"

                />
            <TextView
                android:id="@+id/txtUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/USD"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                ></TextView>
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/GBP"
                android:src="@drawable/img_gbp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />
            <TextView
                android:id="@+id/txtGBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/GBP"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                ></TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>
